<?php
/**
 * Class BuildDictionaries
 *
 * Utility for building dictionaries.
 *
 * @package Ksfraser\PhpabcCanntaireachd
 */
namespace Ksfraser\PhpabcCanntaireachd;
class BuildDictionaries {}
