<?php
/**
 * Class LineByLine
 *
 * Processes input line by line for conversion.
 *
 * @package Ksfraser\PhpabcCanntaireachd
 */
namespace Ksfraser\PhpabcCanntaireachd;
use Ksfraser\PhpabcCanntaireachd\BaseConverter;
class LineByLine extends BaseConverter {}
