<?php
/**
 * Class SimplifyAbc
 *
 * Provides ABC simplification utilities.
 *
 * @package Ksfraser\PhpabcCanntaireachd
 */
namespace Ksfraser\PhpabcCanntaireachd;
use Ksfraser\PhpabcCanntaireachd\Dict2php;

/**
 * SimplifyAbc class for ABC notation simplification.
 *
 * @author ksfraser
 */
class SimplifyAbc extends Dict2php {}
