@startuml
namespace Ksfraser.PhpabcCanntaireachd {
    class Dict2php {
        // ...existing code...
    }

    class SimplifyAbc {
        +SimplifyAbc()
        // ...ABC simplification methods...
    }

    Dict2php <|-- SimplifyAbc

    class AbcParser
    class AbcTuneBase
    class AbcNote
    class LineByLine
    class BuildDictionaries

    AbcTuneBase <|-- AbcParser
    AbcNote <|-- AbcGracenote
    BaseConverter <|-- LineByLine
    Dict2php <|-- SimplifyAbc
    // ...other relationships...

    class AbcDictToken {
        +abc_token: string
        +cannt_token: string
        +bmw_token: string
        +description: string
    }

    class AdminAbcDictScreen {
        +addToken()
        +editToken()
        +deleteToken()
        +listTokens()
    }

    AdminAbcDictScreen --> AbcDictToken : manages
    AbcParser --> AbcDictToken : uses for conversion
    Dict2php --> AbcDictToken : uses for conversion
}
@enduml

' Message Flow Example
' User -> SimplifyAbc::simplify($abcString)
' SimplifyAbc -> Dict2php::parseDict($abcString)
' SimplifyAbc -> AbcParser::parse($abcString)
' AbcParser -> AbcTuneBase (for tune structure)
' AbcParser -> AbcNote (for note objects)
' SimplifyAbc returns simplified ABC notation to User
